# GView_RE-Project

./: CMakeLists.txt
3rdPartyLibs/GIFLib/: CMakeLists.txt
3rdPartyLibs/GIFLib/include/: getarg.h
GViewCore/: CMakeLists.txt
GViewCore/include/: GView.hpp
GViewCore/src/View/ImageViewer/: ImageViewer.hpp  Instance.cpp  Settings.cpp
Types/GIF/: CMakeLists.txt
Types/GIF/include/: gif.hpp
Types/GIF/src/: CMakeLists.txt  GIFFile.cpp  PanelInformation.cpp  gif.cpp
Types/GIF/src/Panels/: CMakeLists.txt  Images.cpp  Information.cpp
Types/JPG/src/: PanelInformation.cpp
